@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: m_stats.c,v 1.16 2001/07/16 11:16:05 leeh Exp $
+ *  $Id: m_stats.c,v 1.17 2001/07/18 01:37:14 lusky Exp $
  */
 #include "m_commands.h"  /* m_pass prototype */
 #include "class.h"       /* report_classes */
@@ -328,7 +328,17 @@ int m_stats(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
       report_mtrie_conf_links(sptr, CONF_CLIENT);
       valid_stats++;
       break;
-
+#ifdef JUPE_CHANNEL
+    case 'J' : case 'j' :
+      if (!IsAnOper(sptr)) {
+	ignore_request++;
+	valid_stats++;
+	break;
+      }
+      report_juped_channels(sptr);
+      valid_stats++;
+      break;
+#endif
     case 'k' :
 #ifdef K_LINES_OPER_ONLY
       if (!IsAnOper(sptr)) 
